--- a/Com.Apphb.Cia.Presentation/app/pages/calendar.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/calendar.html
@@ -2,13 +2,267 @@
 
     <div class="jumbotron">
         <h1>Calendario</h1>
-        <p></p>
+        <p>Tutte le gare ufficiali e le amichevoli disputate, oltre ai riferimenti per i prossimi incontri concordati.</p>
     </div>
 
     <div class="jumbotron">
-        <ul>
-            <li></li>
-        </ul>
+
+        <div class="table-responsive small">
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <td>Data</td>
+                        <td>Luogo</td>
+                        <td>Tipo</td>
+                        <td>Antipasti</td>
+                        <td>Primo</td>
+                        <td>Secondo</td>
+                        <td>Dolce</td>
+                        <td>Bibite</td>
+                    </tr>
+                </thead>
+                <tbody>
+
+                    <tr>
+                        <td>31/10/2011</td>
+                        <td>Casa di Daniele Cammarata</td>
+                        <td>Amichevole</td>
+                        <td>Gianluca Montrasio</td>
+                        <td>Daniele Cammarata</td>
+                        <td>Andrea Inzoli</td>
+                        <td>Angelo Menno</td>
+                        <td>Davide Biscuola, Luca Pradella</td>
+                    </tr>
+
+                    <tr>
+                        <td><a ng-click="scrollTo('20110326')" href="">26/03/2011</a></td>
+                        <td>Casa di Andrea Inzoli</td>
+                        <td>Ufficiale</td>
+                        <td>Luca Pradella</td>
+                        <td>Andrea Inzoli</td>
+                        <td>Angelo Menno</td>
+                        <td>Daniele Cammarata</td>
+                        <td>Gianluca Montrasio, Davide Biscuola</td>
+                    </tr>
+
+                    <tr>
+                        <td><a ng-click="scrollTo('20110430')" href="">30/04/2011</a></td>
+                        <td>Casa di Luca Pradella</td>
+                        <td>Ufficiale</td>
+                        <td>Daniele Cammarata</td>
+                        <td>Luca Pradella</td>
+                        <td>Davide Biscuola</td>
+                        <td>Gianluca Montrasio</td>
+                        <td>Andrea Inzoli, Angelo Menno</td>
+                    </tr>
+
+                    <tr>
+                        <td><a ng-click="scrollTo('20110528')" href="">28/05/2011</a></td>
+                        <td>Casa di Angelo Menno</td>
+                        <td>Amichevole</td>
+                        <td>-</td>
+                        <td>Angelo Menno</td>
+                        <td>Daniele Cammarata</td>
+                        <td>Luca Pradella</td>
+                        <td>Andrea Inzoli, Gianluca Montrasio</td>
+                    </tr>
+
+                    <tr>
+                        <td><a ng-click="scrollTo('20111106')" href="">06/11/2011</a></td>
+                        <td>Casa di Davide Biscuola</td>
+                        <td>Ufficiale</td>
+                        <td>Angelo Menno</td>
+                        <td>Davide Biscuola</td>
+                        <td>Gianluca Montrasio</td>
+                        <td>Andrea Inzoli</td>
+                        <td>Daniele Cammarata, Luca Pradella</td>
+                    </tr>
+
+                    <tr>
+                        <td><a ng-click="scrollTo('20120226')" href="">26/02/2012</a></td>
+                        <td>Casa di Davide Biscuola (In deroga)</td>
+                        <td>Ufficiale</td>
+                        <td>Andrea Inzoli</td>
+                        <td>Gianluca Montrasio</td>
+                        <td>Daniele Cammarata</td>
+                        <td>Davide Biscuola</td>
+                        <td>Angelo Menno, Luca Pradella</td>
+                    </tr>
+
+                    <tr>
+                        <td><a ng-click="scrollTo('20120501')" href="">01/05/2012</a></td>
+                        <td>Casa di Daniele Cammarata</td>
+                        <td>Amichevole</td>
+                        <td>Angelo Menno</td>
+                        <td>Daniele Cammarata</td>
+                        <td></td>
+                        <td>Luca Pradella</td>
+                        <td>Gianluca Montrasio, Andrea Inzoli</td>
+                    </tr>
+
+                    <tr>
+                        <td><a ng-click="scrollTo('20140419')" href="">19/04/2014</a></td>
+                        <td>Casa di Davide Biscuola</td>
+                        <td>???</td>
+                        <td>Gianluca Montrasio</td>
+                        <td>Davide Biscuola</td>
+                        <td>Luca Pradella</td>
+                        <td>Angelo Menno</td>
+                        <td>Daniele Cammarata, Andrea Inzoli</td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+
+        <a id="20140419"></a>
+        <hr />
+        <div class="page-header">
+            <h2>01/05/2012 - ???</h2>
+            <h2>Casa di Davide Biscuola</h2>
+        </div>
+        <p>
+            Dopo due anni, torna Cul In Art, gara piena di polemiche e colpi di scena, sarà ricordata per essere stata la
+            gara con più bambini pressenti e l'annuncio del futuro arrivo dell'erede di Gianluca e Imola.
+        </p>
+        <p class="small">
+            <strong>Il menù:</strong><br />
+            Parmigiana con prosecco<br />
+            Pizzoccheri con Bordeaux<br />
+            Tacos con vino anti mafia<br />
+            Colomba abruzzese con passito<br />
+        </p>
+
+        <a id="20120501"></a>
+        <hr />
+        <div class="page-header">
+            <h2>01/05/2012 - Amichevole</h2>
+            <h2>Casa di Daniele Cammarata</h2>
+        </div>
+        <p>
+            Amichevole più amichevole che mai, pranzo a festeggiare la festa dei lavoratori.
+        </p>
+        <p class="small">
+            <strong>Il menù:</strong><br />
+            ??<br />
+            Pasta fatta in casa<br />
+            Nessun secondo<br />
+            ??<br />
+        </p>
+
+        <a id="20120501"></a>
+        <hr />
+        <div class="page-header">
+            <h2>01/05/2012 - Amichevole</h2>
+            <h2>Casa di Daniele Cammarata</h2>
+        </div>
+        <p>
+            Amichevole più amichevole che mai, pranzo a festeggiare la festa dei lavoratori.
+        </p>
+        <p class="small">
+            <strong>Il menù:</strong><br />
+            ??<br />
+            Pasta fatta in casa<br />
+            Nessun secondo<br />
+            ??<br />
+        </p>
+
+        <a id="20120226"></a>
+        <hr />
+        <div class="page-header">
+            <h2>26/02/2012 - Ufficiale</h2>
+            <h2>Casa di Davide Biscuola</h2>
+        </div>
+        <p>
+            Prima gara fatta di domenica e con la casa in deroga, da ricordare la prima presenza di Camilla all'evento.
+        </p>
+        <p class="small">
+            <strong>Il menù:</strong><br />
+            Antipasto misto, brioches e assenzio<br />
+            Pizzoccheri con vino rosso<br />
+            Agnello e patate al forno con vino rosso<br />
+            Cup cakes con zibibbo<br />
+        </p>
+
+        <a id="20111106"></a>
+        <hr />
+        <div class="page-header">
+            <h2>06/11/2011 - Ufficiale</h2>
+            <h2>Casa di Davide Biscuola</h2>
+        </div>
+        <p>
+            Prima gara fatta all'ora di pranzo, la vecchiaia si fa sentire, da ricordare la spillatrice di birra e gli
+            alcolici di ottimo livello presentati.
+        </p>
+        <p class="small">
+            <strong>Il menù:</strong><br />
+            Focaccia con spumante<br />
+            Acidelli con vino bianco<br />
+            Torta salata con vino rosso<br />
+            Tiramisù con barolo chinato<br />
+        </p>
+
+        <a id="20110528"></a>
+        <hr />
+        <div class="page-header">
+            <h2>28/05/2011 - Amichevole</h2>
+            <h2>Casa di Angelo Menno (sua madre in realtà)</h2>
+        </div>
+        <p>
+            Serata ricordata per la presenza di Ippo, la guest star per eccellenza, piatti di buon livello,
+            alcolia a livelli discreti.
+        </p>
+        <p class="small">
+            <strong>Ospiti a sorpresa:</strong><br />
+            Ippo, Piera, Angelica<br /><br />
+            <strong>Il menù:</strong><br />
+            ??<br />
+            Pasta al sugo<br />
+            Saltimbocca alla romana<br />
+            ??<br />
+        </p>
+
+
+        <a id="20110430"></a>
+        <hr />
+        <div class="page-header">
+            <h2>30/04/2011 - Ufficiale</h2>
+            <h2>Casa di Luca Pradella</h2>
+        </div>
+        <p>
+            Serata con regola di abbigliamento con richiami metal (o abito scuro per gli equivochi), probabilmente
+            l'appuntamento che qualitativamente ha dato i migliori risultati complessivi, sia nelle portate che
+            nelle bevande, assolutamente l'apice della competizione.
+        </p>
+        <p class="small">
+            <strong>Il menù:</strong><br />
+            Misto di mare e monti<br />
+            Pasta fredda<br />
+            Metal condom<br />
+            Torta bomba<br />
+        </p>
+
+        <a id="20110326"></a>
+        <hr />
+        <div class="page-header">
+            <h2>26/03/2011 - Ufficiale</h2>
+            <h2>Casa di Andrea Inzoli</h2>
+        </div>
+        <p>
+            Verrà ricordata come il primo appuntamento ufficiale di Cul In Art, e a tutt'ora mai superato
+            nel delirio complessivo.
+        </p>
+        <p class="small">
+            <strong>Ospiti a sorpresa:</strong><br />
+            Jacopo Mele, Rada e ragazza<br /><br />
+
+            <strong>Il menù:</strong><br />
+            Bruciatini accompagnati da spumante<br />
+            Pasta al pesto con vino bianco<br />
+            Brasato con polenta con vino rosso<br />
+            Torta di rose con tequila bum bum<br />
+        </p>
+
     </div>
 
 </div>
