--- a/Com.Apphb.Cia.Presentation/app/pages/users.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/users.html
@@ -1,5 +1,84 @@
-﻿<div class="jumbotron text-center">
-    <h1>Users Page</h1>
+﻿<style>
+    .col-lg-4 {
+        text-align: center;
+    }
+        .col-lg-4 p {
+            text-align: justify;
+        }
 
-    <p>{{ message }}</p>
+    .featurette-divider {
+        margin: 80px 0;
+    }
+</style>
+
+<div class="container theme-showcase" role="main">
+
+    <div class="jumbotron text-center">
+        <h1>Concorrenti</h1>
+        <p>Ognuno dei concorrenti è sia cuoco che giudice degli altri concorrenti, nonche, a turno, ospitante delle gare.</p>
+    </div>
+
+    <div class="jumbotron">
+        <div class="row">
+
+            <div class="col-lg-4">
+                <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/metal.jpg" alt="metal" />
+                <h2>Angelo Menno</h2>
+                <p>
+                    Nato a Milano il 4 Ottobre del 1977, fin dalla tenera età si dimostra un cultore della birra.<br />
+                    Vegetariano per 200 giorni all'anno circa, si concede alcune grigliate con gli amici e qualche salame nelle sagre di paese.
+                    Rinomato produttore di birra artigianale, si ritira dalla produzione dopo minacce di morte da parte di Heineken.
+                </p>
+            </div>
+
+            <div class="col-lg-4">
+                <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/dani.jpg" alt="dani" />
+                <h2>Daniele Cammarata</h2>
+                <p>
+
+                </p>
+            </div>
+
+            <div class="col-lg-4">
+                <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/montra.jpg" alt="montra" />
+                <h2>Gianluca Montrasio</h2>
+                <p>
+
+                </p>
+            </div>
+
+        </div>
+        
+        <hr class="featurette-divider"/>
+
+        <div class="row">
+
+            <div class="col-lg-4">
+                <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/phil.jpg" alt="phil" />
+                <h2>Luca Pradella</h2>
+                <p>
+
+                </p>
+            </div>
+
+            <div class="col-lg-4">
+                <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/dado.jpg" alt="dado" />
+                <h2>Davide Biscuola</h2>
+                <p>
+
+                </p>
+            </div>
+
+            <div class="col-lg-4">
+                <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/inzo.jpg" alt="inzo" />
+                <h2>Andrea Inzoli</h2>
+                <p>
+
+                </p>
+            </div>
+
+        </div>
+
+    </div>
+
 </div>
