--- a/Com.Apphb.Cia.Presentation/index.html
+++ b/Com.Apphb.Cia.Presentation/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Content/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="Content/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
-    
+    <link href="Content/bootstrap-theme.min.css" rel="stylesheet" type="text/css" /> 
     <link href="Content/theme.css" rel="stylesheet" type="text/css" />
     <link href="Content/cia-main.css" rel="stylesheet" type="text/css" />
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -35,7 +34,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="#rules"><i class="fa fa-file-text-o"></i> Regolamento</a></li>
-                    <li><a href="#users"><i class="fa fa-users"></i> Partecipanti</a></li>
+                    <li><a href="#users"><i class="fa fa-users"></i> Concorenti</a></li>
                     <li><a href="#classification"><i class="fa fa-list-ol"></i> Classifica</a></li>
                     <li><a href="#calendar"><i class="fa fa-calendar-o"></i> Calendario</a></li>
                     <li><a href="#contact"><i class="fa fa-comment-o"></i> Contatti</a></li>
@@ -49,6 +48,12 @@
         <!-- angular templating -->
         <!-- this is where content will be injected -->
         <div ng-view></div>
+    </div>
+    
+    <div class="footer">
+        <div class="container">
+            <p><i class="fa fa-cutlery"></i> Cul in art beta 1 - Created by Daniele Cammarata</p>
+        </div>
     </div>
 
     <script src="Scripts/jquery-1.10.2.min.js"></script>
