--- a/Com.Apphb.Cia.Presentation/app/pages/home.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/home.html
@@ -4,7 +4,12 @@
     <div class="jumbotron">
         <h1>Cul in art!</h1>
         <p>Benvenuto nella pagina ufficiale della gara culinaria più lunga della storia.</p>
-        <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        <p>
+            <a href="#rules" class="btn btn-primary btn-lg" role="button"><i class="fa fa-file-text-o"></i> Regolamento &raquo;</a>
+            <a href="#users" class="btn btn-primary btn-lg" role="button"><i class="fa fa-users"></i> Concorrenti &raquo;</a>
+            <a href="#classification" class="btn btn-primary btn-lg" role="button"><i class="fa fa-list-ol"></i> Classifica &raquo;</a>
+            <a href="#calendar" class="btn btn-primary btn-lg" role="button"><i class="fa fa-calendar-o"></i> Calendario &raquo;</a>
+        </p>
     </div>
 
 </div>
@@ -13,18 +18,52 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col-lg-4">
-                <h2>Heading</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean elementum placerat risus, at ullamcorper lorem molestie non. Aenean feugiat, arcu ac porta facilisis, magna enim pulvinar ipsum, at tincidunt lorem nisi quis lectus. In hac habitasse platea dictumst. Etiam id leo aliquet, imperdiet sapien sed, suscipit eros. Quisque eu vulputate mi. Morbi ut mauris lobortis, hendrerit purus in, semper lacus. Donec aliquam odio massa, eu condimentum mi tempus tincidunt. Duis et imperdiet eros, a bibendum nunc. Aenean at nisi non velit cursus consequat. Nulla rhoncus quis nibh at porttitor. Morbi sed iaculis nunc, id vulputate sapien. Donec pharetra urna quis convallis vehicula.</p>
+                <h2><i class="fa fa-star" style="color: goldenrod"></i> Vetrina</h2>
+                <hr />
+                <p><strong>Gara ufficiale?</strong></p>
+                <p class="small">
+                    Sabato 19 Aprile 2014 si è svolta presso la casa del concorrente <a href="#users/dado">Davide Biscuola</a>
+                    una contestata data della nostra gara, opinioni contrastanti sulla regolarità dell'appuntamento,
+                    considerata da alcuni un'amichevole e da altri una gara ufficiale.
+                </p>
             </div>
 
             <div class="col-lg-4">
-                <h2>Heading</h2>
-                <p>Vestibulum justo elit, pretium ac mollis vel, feugiat euismod magna. Nunc mattis massa at orci condimentum, nec tempor lectus vulputate. Morbi tempus fringilla eros, nec porttitor ante faucibus ut. Nullam nibh arcu, porttitor ut felis ut, egestas posuere enim. Nam eu nibh blandit, varius lectus nec, malesuada erat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris vel suscipit leo. Fusce sollicitudin egestas vulputate. Nullam vehicula ut lorem a pulvinar. Morbi feugiat volutpat aliquet. </p>
+                <h2><i class="fa fa-cutlery" style="color: green"></i> Ricetta del mese</h2>
+                <hr/>
+                <p>
+                    <strong>Dadolata di palta</strong>
+                    <img class="img-circle" style="width:100px; height:50px;" src="/Content/Images/Recipes/palta.jpg" alt="palta" />
+                </p>
+                <p>
+                        <strong class="small">Ingredienti:</strong>
+                        <ul>
+                            <li class="small">un kilo di palta</li>
+                            <li class="small">un kilo di unghie di sgombro</li>
+                            <li class="small">una porzione di filetto di creat</li>
+                            <li class="small">una porzione di filetto di manzo</li>
+                            <li class="small">un etto di domopak</li>
+                            <li class="small">un etto di vello di bulloni</li>
+                            <li class="small">due zampe di mosca</li>
+                            <li class="small">tre ciglia di spilli</li>
+                        </ul>
+                </p>
+                <p class="small">
+                    <strong>Preparazione:</strong> Prepareate un soffrittino leggero con aggiunta di falchetto e scioglietevi dentro una porzione di filetto di manzo e poi fumatevi una canna.
+                    Fate tre polpettine aiutandovi con fegato di una porzione di filetto di manzo e poi fischiettate.
+                    Prepareate un soffrittino leggero con aggiunta di maiale da latte e scioglietevi dentro una porzione di filetto di manzo e poi muovete gli occhi con la testa ferma
+                    ora aggiungete un una spruzzatina di grasso di maiale.
+                    Scottate in padella un kilo di palta nella crema di una porzione di filetto di creat aggingendo con forza un kilo di unghie di sgombro.
+                    Impiattate e servite caldo con l'aggiunta volendo di amarene e pere in crosta di capperi filanti.
+                </p>
+                <a href="#recipes">Tutte le ricette</a>
             </div>
 
             <div class="col-lg-4">
-                <h2>Heading</h2>
-                <p>Vivamus faucibus vehicula ligula, eu porta mi luctus sed. Maecenas ultrices nunc vitae convallis semper. Nunc ac tellus porta, volutpat nunc eu, faucibus diam. Donec aliquet nunc tellus, vel dapibus tortor blandit quis. Nullam vulputate accumsan mauris vitae pretium. Vivamus consequat pharetra luctus. Ut commodo porta porta. Cras condimentum, felis sed tincidunt posuere, lectus dui mattis libero, mollis tempor tortor augue in nunc. Praesent a augue enim. Aenean egestas erat eu sapien laoreet, id faucibus nibh egestas. Sed ornare condimentum libero non placerat.</p>
+                <h2><i class="fa fa-globe" style="color: green"></i> Notizie dal mondo</h2>
+                <hr />
+                <p><strong>Ho la la!!</strong></p>
+                <p class="small">Vivamus faucibus vehicula ligula, eu porta mi luctus sed. Maecenas ultrices nunc vitae convallis semper. Nunc ac tellus porta, volutpat nunc eu, faucibus diam. Donec aliquet nunc tellus, vel dapibus tortor blandit quis. Nullam vulputate accumsan mauris vitae pretium. Vivamus consequat pharetra luctus. Ut commodo porta porta. Cras condimentum, felis sed tincidunt posuere, lectus dui mattis libero, mollis tempor tortor augue in nunc. Praesent a augue enim. Aenean egestas erat eu sapien laoreet, id faucibus nibh egestas. Sed ornare condimentum libero non placerat.</p>
             </div>
         </div>
     </div>
