--- a/Com.Apphb.Cia.Presentation/app/pages/home.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/home.html
@@ -62,8 +62,10 @@
             <div class="col-lg-4">
                 <h2><i class="fa fa-globe" style="color: green"></i> Notizie dal mondo</h2>
                 <hr />
-                <p><strong>Ho la la!!</strong></p>
-                <p class="small">Vivamus faucibus vehicula ligula, eu porta mi luctus sed. Maecenas ultrices nunc vitae convallis semper. Nunc ac tellus porta, volutpat nunc eu, faucibus diam. Donec aliquet nunc tellus, vel dapibus tortor blandit quis. Nullam vulputate accumsan mauris vitae pretium. Vivamus consequat pharetra luctus. Ut commodo porta porta. Cras condimentum, felis sed tincidunt posuere, lectus dui mattis libero, mollis tempor tortor augue in nunc. Praesent a augue enim. Aenean egestas erat eu sapien laoreet, id faucibus nibh egestas. Sed ornare condimentum libero non placerat.</p>
+                <p><strong>Si commenta da sola</strong></p>
+                <p class="small">
+                    <img alt="32" src="/Content/Images/News/JU13950.jpg"/>
+                </p>
             </div>
         </div>
     </div>
