--- a/Com.Apphb.Cia.Presentation/app/pages/users.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/users.html
@@ -2,6 +2,7 @@
     .col-lg-4 {
         text-align: center;
     }
+
         .col-lg-4 p {
             text-align: justify;
         }
@@ -27,7 +28,8 @@
                 <p>
                     Nato a Milano il 4 Ottobre del 1977, fin dalla tenera età si dimostra un cultore della birra.<br />
                     Vegetariano per 200 giorni all'anno circa, si concede alcune grigliate con gli amici e qualche salame nelle sagre di paese.
-                    Rinomato produttore di birra artigianale, si ritira dalla produzione dopo minacce di morte da parte di Heineken.
+                    Rinomato produttore di birra artigianale, si ritira dalla produzione dopo minacce di morte da parte di Heineken.<br />
+                    Fa parte del gran consiglio degli anziani, avendo stipulato la prima versione del regolamento.
                 </p>
             </div>
 
@@ -35,7 +37,11 @@
                 <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/dani.jpg" alt="dani" />
                 <h2>Daniele Cammarata</h2>
                 <p>
-
+                    Nato a Cernusco sul Naviglio il 12 Febbraio 1977, smanettone, viaggiatore e curioso di natura.<br />
+                    Fra i concorrenti è quello tra quelli più impegnati a trovare pieghe all'interno del regolamento da sfruttare
+                    a suo vantaggio, pur mantenendo un etica di voto ineccepibile<br />
+                    Fa parte del gran consiglio degli anziani, avendo stipulato la prima versione del regolamento, ed è uno
+                    degli scriba originali, possessore della carta originale.
                 </p>
             </div>
 
@@ -43,13 +49,14 @@
                 <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/montra.jpg" alt="montra" />
                 <h2>Gianluca Montrasio</h2>
                 <p>
-
+                    Nato a Milano a Giugno ( non mi ricordo mai il giorno ) del 1978, il più giovane in gara, è l'unico laureato fra i concorrenti, l'unico
+                    ad aver frequentato un corso di cucina per prepararsi alla competizione, si dimostra avversario valido e preparato,
+                    spesso stroncato dagli avversari perchè, giustamente, crea aspettative a volte inattese.<br/>
+                    Fra i più polemici nella fase di voto, non dimostra sempre equilibrio e neutralità.
                 </p>
             </div>
 
         </div>
-        
-        <hr class="featurette-divider"/>
 
         <div class="row">
 
@@ -57,7 +64,9 @@
                 <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/phil.jpg" alt="phil" />
                 <h2>Luca Pradella</h2>
                 <p>
-
+                    Nato a Milano a Giugno ( non mi ricordo mai il giorno ) del 1977, fotografo di moda e per hobby di matrimoni.<br/>
+                    Ritenuto dalla maggior parte dei concorrenti l'outsider pronto a sfornare sofficini, sorprende tutti con piatti
+                    etnici e della tradizione ben eseguiti. Maestro nell'utilizzo dei grassi indiscusso.
                 </p>
             </div>
 
@@ -65,7 +74,10 @@
                 <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/dado.jpg" alt="dado" />
                 <h2>Davide Biscuola</h2>
                 <p>
-
+                    Nato a Milano a Giugno ( non mi ricordo mai il giorno ) del 1977, tutto fare di professione, meteora del basket pioltellese e valido concorrente.<br/>
+                    In assoluto è lo stratega, vota e cucina con l'occhio fisso alla classifica, fra i maggiori conoscitori del
+                    regolamento, cerca di sfruttarlo a suo vantaggio ed a svantaggio delgli avversari come nessun altro sa fare.<br/>
+                    Fa parte del gran consiglio degli anziani, avendo stipulato la prima versione del regolamento, a casa sua a Pessano, e mantenuto spesso traccia dei punteggi.
                 </p>
             </div>
 
@@ -73,7 +85,10 @@
                 <img class="img-circle" style="width:140px; height:140px;" src="/Content/Images/Users/inzo.jpg" alt="inzo" />
                 <h2>Andrea Inzoli</h2>
                 <p>
-
+                    Nato a Milano il 30 Marzo del 1977, bancario esperto, collezzionista di qualsiasi cosa, e polemico di natura.<br/>
+                    Considerato fin dall'inizio fra i più deboli nella gara, conferma la teoria con piatti non sempre apprezzati, pur
+                    riuscendo a sorprendere con qualche guizzo.<br/>
+                    Si puo considerare la mente da cui è nato Cul In Art, da una sua mail del 2 Febbraio del 2011 è partito tutto, e chissà se finirà mai.
                 </p>
             </div>
 
