--- a/Com.Apphb.Cia.Presentation/app/pages/contact.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/contact.html
@@ -6,9 +6,7 @@
     </div>
 
     <div class="jumbotron">
-        <ul>
-            <li></li>
-        </ul>
+        <i class="fa fa-wheelchair"></i> In fase di realizzazione
     </div>
 
 </div>
