--- a/Com.Apphb.Cia.Presentation/app/pages/recipes.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/recipes.html
@@ -10,9 +10,7 @@
     </div>
 
     <div class="jumbotron">
-        <ul>
-            <li></li>
-        </ul>
+        <i class="fa fa-wheelchair"></i> In fase di realizzazione
     </div>
 
 </div>
