--- a/Com.Apphb.Cia.Presentation/index.html
+++ b/Com.Apphb.Cia.Presentation/index.html
@@ -29,16 +29,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Cul in art</a>
+                <a class="navbar-brand" href="/#">Cul in art</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#rules"><i class="fa fa-file-text-o"></i> Regolamento</a></li>
-                    <li><a href="#users"><i class="fa fa-users"></i> Concorenti</a></li>
-                    <li><a href="#classification"><i class="fa fa-list-ol"></i> Classifica</a></li>
-                    <li><a href="#calendar"><i class="fa fa-calendar-o"></i> Calendario</a></li>
-                    <li><a href="#contact"><i class="fa fa-comment-o"></i> Contatti</a></li>
-                    <li><a href="#info"><i class="fa fa-tachometer"></i> Info</a></li>
+                    <li><a href="/#rules"><i class="fa fa-file-text-o"></i> Regolamento</a></li>
+                    <li><a href="/#users"><i class="fa fa-users"></i> Concorenti</a></li>
+                    <li><a href="/#classification"><i class="fa fa-list-ol"></i> Classifica</a></li>
+                    <li><a href="/#calendar"><i class="fa fa-calendar-o"></i> Calendario</a></li>
+                    <li><a href="/#contact"><i class="fa fa-comment-o"></i> Contatti</a></li>
+                    <li><a href="/#info"><i class="fa fa-tachometer"></i> Info</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
